# finalbot

./: Cargo.toml  flake.nix
src/: args.rs  hotkey.rs  main.rs  mouse.rs  pipewire.rs  pixel.rs  portal.rs
