[package]
name = "finalbot"
version = "0.1.0"
edition = "2024"
description = "PipeWire screen capture pixel sampler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/finalbot"
readme = "README.md"
keywords = ["pipewire", "screencast", "pixel", "sampler"]
categories = ["multimedia::video"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# transitive dependency duplicates are unavoidable
multiple_crate_versions = "allow"

# lints covered by pedantic are not repeated here
# these are the strict lints beyond pedantic + cargo groups
ref_patterns = "warn"
unnecessary_join = "warn"
unnecessary_self_imports = "warn"

[dependencies]
anyhow = "1"
ashpd = { version = "0.13", features = ["screencast", "pipewire"] }
ctrlc = "3"
image = "0.25"
pipewire = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }